tests/error/modules_invalid_prefix.vibe
// ERROR: invalid import prefix
use unknown.foo.bar

fn main() -> i32 {
    return 0
}
